@@ -2,9 +2,10 @@ package com.gin.nga.params.nuke.pm;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
-import com.gin.common.serializer.ListLongSerializer;
+import com.gin.jackson.serializer.ListLongSerializer;
 import lombok.Getter;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -39,6 +40,6 @@ public class PmNewParam extends PmBaseParam {
         this.userId = userId;
     }
     public PmNewParam(String title, String content, Long... userId) {
-        this(title, content, List.of(userId));
+        this(title, content, Arrays.asList(userId));
     }
 }
