@@ -1,13 +1,13 @@
 package com.gin.nga.response.field;
 
+import com.gin.jackson.utils.ObjectUtils;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
-import org.springframework.util.ObjectUtils;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * 屏蔽数据
@@ -35,8 +35,8 @@ public class BlockData {
             return;
         }
         final String[] split = data.split(REGEX);
-        this.keywords = new ArrayList<>(Arrays.stream(split[1].split(SPACE)).filter(obj -> !ObjectUtils.isEmpty(obj)).toList());
-        this.users = new ArrayList<>(Arrays.stream(split[2].split(SPACE)).filter(obj -> !ObjectUtils.isEmpty(obj)).toList());
+        this.keywords = Arrays.stream(split[1].split(SPACE)).filter(obj -> !ObjectUtils.isEmpty(obj)).collect(Collectors.toList());
+        this.users = Arrays.stream(split[2].split(SPACE)).filter(obj -> !ObjectUtils.isEmpty(obj)).collect(Collectors.toList());
     }
 
     /**
